# game_cell

./: CMakeLists.txt  EntitiesControler.gd  README.md  main.cpp  rascunho
.import/: Dungeon Ruins Tileset Day.png-65dfc38294ae3edc517ad7fe0f9ec6fc.md5  Dungeon Ruins Tileset Day.png-65dfc38294ae3edc517ad7fe0f9ec6fc.stex  SCi-fi assets planet one.png-905a195dfb9e93f45e3ecfd236736142.md5  cleiton.png-efe77364fad1ca590c736546fb29bf2d.md5  cleiton.png-efe77364fad1ca590c736546fb29bf2d.stex  damaged.png-582bcac4b0082f375b6c3756a483d2b8.md5  damaged.png-582bcac4b0082f375b6c3756a483d2b8.stex
Game/: Game.gd  Game.tscn  Menu.gd
Interface/: CanvasLayer.gd
Level/: Level.tres
Player/: PlayerScene.tscn
Player/heros/ray/: Ray.gd  Ray.tscn
addons/godotsteam/: godotsteam.gdnlib  plugin.cfg  steam.gd
assets/maps/d2/: metadata.txt
enemy/: charge.png.import  run.png.import  transition to charge.png.import
godot_version/: EntitiesControler.gd  new_script.vs  project.godot  steam_appid.txt
godot_version/.import/: SCi-fi assets planet one.png-3fc5071884375d680b02c9638e77e33d.md5  SCi-fi assets planet one.png-3fc5071884375d680b02c9638e77e33d.stex  SCi-fi assets planet one.png-905a195dfb9e93f45e3ecfd236736142.stex  SCi-fi assets planet one_scaled_3x_pngcrushed.png-06223cede5c0dc07a63690c81cc7c688.md5  SCi-fi assets planet one_scaled_3x_pngcrushed.png-06223cede5c0dc07a63690c81cc7c688.stex  death.png-29b20848be8b9b4de5874f36369d8217.stex  death.png-37e8847ec6d18517096a7d7fb8e37ce5.md5
godot_version/Game/: Game.gd  Game.tscn  Menu.gd  Menu.tscn
godot_version/Interface/: InGame.tscn
godot_version/Level/: Level.tres  Level.tscn  SCi-fi assets planet one.png.import  SCi-fi assets planet one_scaled_3x_pngcrushed.png.import
godot_version/Player/: PlayerScene.gd  PlayerScene.tscn  SCi-fi assets planet one.png.import  cleiton.png.import
godot_version/addons/godotsteam/: steam.gd
godot_version/enemy/: Enemy.gd  Enemy.tscn  death.png.import  hit.png.import
godot_version/stormhead/: attack.png.import  damaged.png.import  death.png.import  idle.png.import  run.png.import
sfml_version/: CMakeLists.txt
sfml_version/src/: Assets.h  Collision.h  Core.h  Entity.cpp  Entity.h  GameManager.cpp  P2PClient.cpp  P2PClient.h  P2Pserver.cpp  State.h
sfml_version/src/old/: DedicatedServer.cpp  DedicatedServer.h
sfml_version/src/utils/: BaseMenu.cpp  Chat.cpp  ServerMenu.h  fps.h
sfml_version/steam/: isteamcontroller.h
src/: Assets.cpp  Collision.cpp  Collision.h  Core.cpp  Core.h  DedicatedServer.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  P2PClient.cpp  P2PClient.h  P2Pserver.cpp  P2Pserver.h  Player.cpp  Player.h  Server.cpp  Server.h  State.h
src/map/: Map.cpp  Map.h  StringUtils.h
src/utils/: BaseMenu.cpp  BaseMenu.h  Chat.cpp  Chat.h  Message.h  ServerMenu.cpp  ServerMenu.h  fps.h
steam/: isteamgameserver.h  isteammatchmaking.h  isteamnetworkingsockets.h  isteamuserstats.h  isteamutils.h  matchmakingtypes.h  steamclientpublic.h  steamhttpenums.h
thecell/: Zombie Punching.dae  Zombie Punching.dae.import  project.godot  steam_appid.txt
thecell/.import/: 20 Gauge Burst Isolated.wav-ef23b8d9a75b91d5673b0e5944c47a2a.md5  20 Gauge Burst Isolated.wav-ef23b8d9a75b91d5673b0e5944c47a2a.sample  20 Gauge Burst.wav-ce4e90ce9703741fe19df3411c58c4f3.md5  20 Gauge Burst.wav-ce4e90ce9703741fe19df3411c58c4f3.sample  20 Gauge Double Tap Isolated.wav-94e68560aac987021408e96d0b388cd4.md5  20 Gauge Double Tap Isolated.wav-94e68560aac987021408e96d0b388cd4.sample  20 Gauge Double Tap.wav-cb38961767c3f7bb4190a57228978278.md5  20 Gauge Double Tap.wav-cb38961767c3f7bb4190a57228978278.sample  20 Gauge Single Isolated.wav-624fd11873f9771cdef00b8a6e4d8a8c.md5  20 Gauge Single Isolated.wav-624fd11873f9771cdef00b8a6e4d8a8c.sample  20 Gauge Single.wav-ce3e6e3489f34a8c5d015d86f73b774c.md5  20 Gauge Single.wav-ce3e6e3489f34a8c5d015d86f73b774c.sample  20 Gauge Slow Burst Isolated.wav-95d32af2203671207f611ec0b779d0c5.md5  20 Gauge Slow Burst Isolated.wav-95d32af2203671207f611ec0b779d0c5.sample  20 Gauge Slow Burst.wav-6a9e69996e8bbce44926b0d5155acbb7.md5  20 Gauge Slow Burst.wav-6a9e69996e8bbce44926b0d5155acbb7.sample  20 Gauge Spray Isolated.wav-30f8f609f14e3ea5a691a8497ef76bf1.md5  20 Gauge Spray Isolated.wav-30f8f609f14e3ea5a691a8497ef76bf1.sample  20 Gauge Spray.wav-e374b136b0b2cb8681e8b0a9255488ac.md5  20 Gauge Spray.wav-e374b136b0b2cb8681e8b0a9255488ac.sample  22LR Magazine Pack.wav-99bd2fac27e6195fbd30ca16887a7b82.md5  22LR Magazine Pack.wav-99bd2fac27e6195fbd30ca16887a7b82.sample  22LR Magazine Unpack.wav-4b3cec350d0e7af1261fc9f1573d9a02.md5  22LR Magazine Unpack.wav-4b3cec350d0e7af1261fc9f1573d9a02.sample  32 SW Close Cylinder.wav-2c76009479cae7ffa827ba7f8d5cadb4.md5  32 SW Close Cylinder.wav-2c76009479cae7ffa827ba7f8d5cadb4.sample  32 SW Eject One Casing.wav-19b719199ec9f6f55921380111412efa.md5  32 SW Eject One Casing.wav-19b719199ec9f6f55921380111412efa.sample  32 SW Hammer Cock.wav-43ae298581f1dee3ef6375026f7882f1.md5  32 SW Hammer Cock.wav-43ae298581f1dee3ef6375026f7882f1.sample  32 SW Hammer Decock.wav-8318cb69e0b2131f25bfa52023c9a503.md5  32 SW Hammer Decock.wav-8318cb69e0b2131f25bfa52023c9a503.sample  32 SW Open Cylinder Full.wav-b7c0ccd18da9a7681fcba73af8f5d9fa.md5  32 SW Open Cylinder Full.wav-b7c0ccd18da9a7681fcba73af8f5d9fa.sample  32 SW Open Cylinder Part 1.wav-1519bc833aab3787c6fdf087aeaaf657.md5  32 SW Open Cylinder Part 1.wav-1519bc833aab3787c6fdf087aeaaf657.sample  32 SW Open Cylinder Part 2.wav-2b3b0d01ead76f0b09a534c91304d6e0.md5  32 SW Open Cylinder Part 2.wav-2b3b0d01ead76f0b09a534c91304d6e0.sample  32 SW Rotate Cylinder.wav-b8e9e9a1e96eff8da2dcc2fa13118079.md5  32 SW Rotate Cylinder.wav-b8e9e9a1e96eff8da2dcc2fa13118079.sample  (+209 more)
thecell/data/images/: default-avatar-large.png.import.tmp  default-avatar-medium.png.import.tmp  default-avatar-small.png.import.tmp
thecell/src/: game.gd  game.tscn  global.gd  main.gd  main.tscn
thecell/src/enemy/: Walking.dae  Walking.dae.import  Zombie Dying.dae  Zombie Dying.dae.import  enemy.gd  enemy.tscn  (+1 more)
(+545 files in other folders)
